2005-02-04  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h: move entity_content_type here; add
	  entity_charset.
	* FileSet.cc, FileSet.h: (allocated) new member; optimize memory
	  allocation.
	* Http.cc, Http.h: make atotm a static method; implement MP_LIST
	  as PROPFIND; extract entity charset.
	* HttpDir.cc, HttpDir.h: try MP_LIST; call ParseProps.
	* HttpDirXML.cc: new file; implement ParseProps.

2005-02-03  Alexander V. Lukyanov <lav@yars.free.net>

	* SFtp.cc: don't set error when optional STAT or FSTAT return error.
	* FileGlob.cc: skip ./ in file names so that globbing works with tildes.
	* FileSet.cc: allow setting name to tail of itself.

2005-01-21  Alexander V. Lukyanov <lav@yars.free.net>

	* Fish.cc, Http.cc, LsCache.cc, SFtp.cc, ftpclass.cc: cast `now' to
	  time_t explicitly to please some compilers.

2005-01-21  Thomas Glanzmann <sithglan@stud.uni-erlangen.de>

	* SFtp.cc, Fish.cc, resource.cc: change connect-program to work with
	  Solaris 9 ssh.

2005-01-21  Alexander V. Lukyanov <lav@yars.free.net>

	* Fish.cc: make reget more efficient by using larger block size and
	  dd skip.
	* Resolver.cc: declare dn_expand and dn_skipname if needed.

2005-01-11  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, TimeDate.cc: fix buffer size handling for strftime.

2005-01-09  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: fixed SITE UTIME and overloaded MDTM - send proper
	  modification time.

2005-01-04  Alexander V. Lukyanov <lav@yars.free.net>

	* LocalAccess.cc: move Block'ing to Read and Write, this fixes spinning
	  if disk is full.
	* SFtp.cc: fix timeout handling when idle time > timeout.

2004-12-28  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc, Http.h: (DirFile) new method; use MKCOL, MOVE, add Depth
	  header for DELETE and support 102 reply (WebDAV preliminary support).
	* MirrorJob.cc, resource.cc: add mirror:set-permissions setting.
